change jump to section to use JS to avoid adding section names to url

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ body {
 a {
   color: #4E4E4E;
   opacity: 0.7;
+  cursor: pointer;
 }
 
 a:hover {
